--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
             android:weightSum="2">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/buyandfindbook"
+                android:id="@+id/findbookinformation"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="12dp"
