--- a/app/src/main/res/layout/activity_splach.xml
+++ b/app/src/main/res/layout/activity_splach.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
+    android:background="#f2f1f1"
     tools:context="leadinguniversity.bookapp.Ui.SplachActivity">
 
     <TextView
